--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 ash = "0.37.3"
+ash-window = "0.12.0"
 glfw = { version = "0.52.0", features = ["vulkan"] }
+raw-window-handle = "0.5.2"
 voxelar-math = { path = "./voxelar-math" }
