--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2021"
 [dependencies]
 ash = "0.37.3"
 ash-window = "0.12.0"
+shaderc = "0.8.2"
+
 glfw = { version = "0.52.0", features = ["vulkan"] }
 raw-window-handle = "0.5.2"
+
+lazy_static = "1.4.0"
 voxelar-math = { path = "./voxelar-math" }
