--- a/voxelar-vertex/Cargo.toml
+++ b/voxelar-vertex/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "voxelar-demo"
+name = "voxelar-vertex"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-voxelar = { path = "../../." }
-voxelar-vertex = { path = "../../voxelar-vertex" }
+ash = "0.37.3"
+voxelar-vertex-derive = { path = "../voxelar-vertex-derive" }
