--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+allocator-debug-logs = []
+
 [dependencies]
 ash = "0.37.3"
 ash-window = "0.12.0"
