--- a/examples/voxelar-demo/Cargo.toml
+++ b/examples/voxelar-demo/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-voxelar = { path = "../../." }
+voxelar = { path = "../../.", features = ["allocator-debug-logs"] }
 voxelar-vertex = { path = "../../voxelar-vertex" }
