--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ nalgebra = "0.32.3"
 glfw = { version = "0.52.0", features = ["vulkan"] }
 raw-window-handle = "0.5.2"
 
-lazy_static = "1.4.0"
-
 paste = "1.0.13"
+lazy_static = "1.4.0"
+voxelar-utils = { version = "0.1.0", path = "voxelar-utils" }
 
 [dev-dependencies]
 rstest = "0.18.1"
