--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,15 @@ edition = "2021"
 allocator-debug-logs = []
 
 [dependencies]
+winit = "0.28.6"
+raw-window-handle = "0.5.2"
+
 ash = "0.37.3"
 ash-window = "0.12.0"
 gpu-allocator = { version = "0.22.0", default-features = false, features = ["ash", "vulkan"] }
 shaderc = "0.8.2"
 
 nalgebra = "0.32.3"
-
-glfw = { version = "0.52.0", features = ["vulkan"] }
-raw-window-handle = "0.5.2"
 
 paste = "1.0.13"
 lazy_static = "1.4.0"
