--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ ash = "0.37.3"
 ash-window = "0.12.0"
 gpu-allocator = { version = "0.22.0", default-features = false, features = ["ash", "vulkan"] }
 shaderc = "0.8.2"
+image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
 
 nalgebra = "0.32.3"
 
