After offloading voxelar-utils and voxelar-vertex to their own git repositories, update the example and the voxelar lib crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ egui = "0.22.0"
 egui-winit = "0.22.0"
 egui-winit-ash-integration = { git = "https://github.com/jarvarvarvis/egui-winit-ash-integration" }
 
-voxelar-utils = { path = "voxelar-utils" }
+voxelar-utils = { git = "https://github.com/jarvarvarvis/voxelar-utils" }
 
 nalgebra = "0.32.3"
 
