--- a/examples/textured-quad/Cargo.toml
+++ b/examples/textured-quad/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 voxelar = { path = "../../." }
-voxelar-vertex = { path = "../../voxelar-vertex" }
+voxelar-vertex = { git = "https://github.com/jarvarvarvis/voxelar-vertex" }
