--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ raw-window-handle = "0.5.2"
 ash = "0.37.3"
 ash-window = "0.12.0"
 gpu-allocator = { version = "0.22.0", default-features = false, features = ["ash", "vulkan"] }
-shaderc = "0.8.2"
+shaderc = { version = "0.8.2", optional = true }
 image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
 
 egui = "0.22.0"
@@ -25,3 +25,6 @@ nalgebra = "0.32.3"
 
 paste = "1.0.13"
 lazy_static = "1.4.0"
+
+[features]
+shaderc-crate = ["shaderc"]
