--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ raw-window-handle = "0.5.2"
 ash = "0.37.3"
 ash-window = "0.12.0"
 gpu-allocator = { version = "0.22.0", default-features = false, features = ["ash", "vulkan"] }
-shaderc = { version = "0.8.2", optional = true }
 image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
+
+shaderc = { version = "0.8.2", optional = true }
+crevice = { version = "0.13.0", optional = true, features = ["nalgebra"] }
 
 egui = "0.22.0"
 egui-winit = "0.22.0"
@@ -28,3 +30,5 @@ lazy_static = "1.4.0"
 
 [features]
 shaderc-crate = ["shaderc"]
+crevice-crate = ["crevice"]
+
