Add egui feature flag, use render subpass instead of layout transition command for depth image image layout

--- a/examples/billboards/Cargo.toml
+++ b/examples/billboards/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-voxelar = { path = "../../.", features = ["shaderc-crate"] }
+voxelar = { path = "../../.", features = ["shaderc-crate", "egui-integration"] }
 voxelar-vertex = { git = "https://github.com/jarvarvarvis/voxelar-vertex" }
