--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,15 @@ raw-window-handle = "0.5.2"
 
 ash = "0.37.3"
 ash-window = "0.12.0"
+
 gpu-allocator = { version = "0.22.0", default-features = false, features = ["ash", "vulkan"] }
 image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
 
 shaderc = { version = "0.8.2", optional = true }
 
-egui = "0.22.0"
-egui-winit = "0.22.0"
-egui-winit-ash-integration = { git = "https://github.com/jarvarvarvis/egui-winit-ash-integration" }
+egui = { version = "0.22.0", optional = true }
+egui-winit = { version = "0.22.0", optional = true }
+egui-winit-ash-integration = { git = "https://github.com/jarvarvarvis/egui-winit-ash-integration", optional = true }
 
 voxelar-utils = { git = "https://github.com/jarvarvarvis/voxelar-utils" }
 
@@ -29,4 +30,4 @@ lazy_static = "1.4.0"
 
 [features]
 shaderc-crate = ["shaderc"]
-
+egui-integration = ["egui", "egui-winit", "egui-winit-ash-integration"]
